--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
     rel="stylesheet">
+
+    <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
   <title>FriendTrips</title>
 </head>
 
