--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,11 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
     rel="stylesheet">
+    <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
 
-  <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
+<!--
+    <link href='../node_modules/@fullcalendar/core/main.css' rel='stylesheet' />
+    <link href='../node_modules/@fullcalendar/daygrid/main.css' rel='stylesheet' /> -->
   <title>FriendTrips</title>
 </head>
 
